k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app-ui-svc
spec:
  selector:
    app: weather-app-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
